k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "pet-ip"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: petclinic
            port:
              number: 80
